--- a/assets/scss/common/_mobile.scss
+++ b/assets/scss/common/_mobile.scss
@@ -273,7 +273,7 @@
     width: calc(100dvw - 48px);
     max-width: 400px;
     margin: 24px;
-    border-radius: 8px;
+    border-radius: 4px;
     border: none !important;
     outline: none !important;
     background-color: var(--board-background-color) !important;
