--- a/assets/scss/common/_theming.scss
+++ b/assets/scss/common/_theming.scss
@@ -39,7 +39,7 @@
     --card-background-0: var(--primary-2);
     --card-background-1: var(--secondary-2);
     --center-title-color: var(--primary-3);
-    --code-color: var(--primary-3-border);
+    --code-color: #818b981f;
     --contact-us-button-background: var(--primary-1);
     --contact-us-button-color: #ffffff;
     --docs-navigation-border: var(--primary-2);
